Add customer notifications and web alerts

--- a/customer/customer-profile.html
+++ b/customer/customer-profile.html
@@ -117,6 +117,19 @@
       </div>
     </section>
 
+    <section class="card notifications" id="notificationsSection">
+      <div class="notifications-header">
+        <div>
+          <div class="card-title">Notifications</div>
+          <div class="small-muted">Project updates will appear here.</div>
+        </div>
+        <button class="btn btn-ghost btn-sm" id="enableNotificationsBtn">Allow Notifications</button>
+      </div>
+      <div class="notifications-list" id="notificationsList">
+        <div class="muted" id="notificationsEmpty">No notifications yet.</div>
+      </div>
+    </section>
+
     <section class="content-grid">
       <div class="card projects" id="projectsSection">
         <div class="card-title">Your Projects</div>
