Restore mobile login and OTP reset

--- a/login/login.html
+++ b/login/login.html
@@ -46,7 +46,8 @@
 
   <div class="modal" id="forgotModal">
     <div class="modal-box">
-      <h3>Reset Password</h3>
+      <h3 id="resetTitle">Reset Password</h3>
+      <p id="resetHint">Enter your email to receive a password reset link.</p>
       <input
         id="resetEmail"
         type="text"
@@ -65,14 +66,6 @@
       </div>
       <div id="resetRecaptcha" class="recaptcha-slot"></div>
       <p id="resetMsg"></p>
-    </div>
-  </div>
-
-  <div class="modal" id="comingModal">
-    <div class="modal-box">
-      <h3>Coming Soon</h3>
-      <p>Account creation feature will be available soon.</p>
-      <button id="closeComing">Back</button>
     </div>
   </div>
 
