--- a/employee/employee.html
+++ b/employee/employee.html
@@ -68,13 +68,11 @@
 <i class="fas fa-times"></i>
 </button>
 </div>
-<div class="next-leave-pill" id="nextLeavePill">
-  <i class="fas fa-calendar-check"></i>
-  <span class="label">Next Holiday:</span>
-  <span class="value" id="nextLeaveDate">Loading...</span>
-</div>
 <button class="btn btn-ghost btn-sm" id="openInfoBtn">
 <i class="fas fa-user"></i> Your Information
+        </button>
+<button class="btn btn-ghost btn-sm" id="openLeaveBtn">
+<i class="fas fa-plane-departure"></i> Leave
         </button>
 <button class="btn btn-ghost btn-sm" id="assignProjectBtn">
 <i class="fas fa-plus"></i> Assign Project
