--- a/employee/info.html
+++ b/employee/info.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" id="leaveSection">
       <div class="card-header">
         <h3 class="card-title"><i class="fas fa-user"></i> Your Information</h3>
         <div style="display:flex;gap:8px;">
