Fix client name sync and job visibility

--- a/admin/pages/billing/billing.html
+++ b/admin/pages/billing/billing.html
@@ -132,7 +132,7 @@
 </div>
 
 <script type="module" src="./assets/billing.js"></script>
-<script type="module" src="/admin/assets/admin-auth.js"></script>
+<script type="module" src="../../assets/admin-auth.js"></script>
 </body>
 </html>
 
