--- a/admin/pages/dashboard/dashboard.html
+++ b/admin/pages/dashboard/dashboard.html
@@ -124,7 +124,7 @@
 </div>
 
 <script type="module" src="dashboard.js"></script>
-<script type="module" src="/admin/assets/admin-auth.js"></script>
+<script type="module" src="../../assets/admin-auth.js"></script>
 </body>
 </html>
 
