--- a/admin/pages/recycle-bin/recycle-bin.html
+++ b/admin/pages/recycle-bin/recycle-bin.html
@@ -61,7 +61,7 @@
 </div>
 </div>
 <script defer="defer" src="./assets/recycle-bin.js" type="module"></script>
-<script type="module" src="/admin/assets/admin-auth.js"></script>
+<script type="module" src="../../assets/admin-auth.js"></script>
 </body>
 </html>
 
