Add admin push notifications

--- a/employee/employee.html
+++ b/employee/employee.html
@@ -8,7 +8,7 @@
 <link href="employee-user.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
 </head>
-<body>
+<body class="page-employee-panel">
 <div class="container">
 <!-- PUNCH-IN GATE -->
 <div class="punch-gate" id="punchInGate">
@@ -45,6 +45,17 @@
 </button>
 </div>
 </div>
+</div>
+
+<div class="page-hero">
+  <div>
+    <h1>Employee Dashboard</h1>
+    <p class="muted">Your profile, attendance, and assigned jobs in one place.</p>
+  </div>
+  <div class="hero-chip">
+    <i class="fas fa-shield-alt"></i>
+    Secure &bull; Live Data
+  </div>
 </div>
 
 <div class="notif-panel" id="notifPanel" style="display:none;">
